--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b577ab">  <td>24/09/27 16:50:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.configureAppiumTest()[pri:0, instance:GeneralStore.TestCases.FormPageTest@1ed4ae0f]">&gt;&gt;configureAppiumTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@987249254</td>   <td></td> </tr>
-<tr bgcolor="7cfad4">  <td>24/09/27 16:50:39</td>   <td>10212</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FormPageTest.test()[pri:0, instance:GeneralStore.TestCases.FormPageTest@1ed4ae0f]">test</td> 
-  <td>main@987249254</td>   <td></td> </tr>
-<tr bgcolor="b577ab">  <td>24/09/27 16:50:56</td>   <td>27830</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:GeneralStore.TestCases.FormPageTest@1ed4ae0f]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@987249254</td>   <td></td> </tr>
+<tr bgcolor="b577ab">  <td>24/09/30 14:53:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.configureAppiumTest()[pri:0, instance:GeneralStore.TestCases.test@2a265ea9]">&gt;&gt;configureAppiumTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1850954068</td>   <td></td> </tr>
+<tr bgcolor="b577ab">  <td>24/09/30 14:54:19</td>   <td>19766</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:GeneralStore.TestCases.test@2a265ea9]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1850954068</td>   <td></td> </tr>
+<tr bgcolor="7cfad4">  <td>24/09/30 14:54:08</td>   <td>8461</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="test.tests()[pri:0, instance:GeneralStore.TestCases.test@2a265ea9]">tests</td> 
+  <td>main@1850954068</td>   <td></td> </tr>
 </table>
