--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Lynx User\AppData\Local\Temp\testng-eclipse-1202014334\testng-customsuite.xml</span>
+                    <span>C:\Users\Lynx User\AppData\Local\Temp\testng-eclipse-1323312574\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="GeneralStore.TestCases.test" class="method navigator-link" hash-for-method="tests">tests</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="GeneralStore.TestCases.TestExecution" class="method navigator-link" hash-for-method="FormPage_Test">FormPage_Test</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="GeneralStore.TestCases.TestExecution" class="method navigator-link" hash-for-method="cartPage">cartPage</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="GeneralStore.TestCases.TestExecution" class="method navigator-link" hash-for-method="productCatalogue">productCatalogue</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +131,28 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">GeneralStore.TestCases.test</span>
+              <span class="class-name">GeneralStore.TestCases.TestExecution</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="tests">
-                  </a> <!-- tests -->
-                  <span class="method-name">tests</span>
+                  <a name="FormPage_Test">
+                  </a> <!-- FormPage_Test -->
+                  <span class="method-name">FormPage_Test</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="cartPage">
+                  </a> <!-- cartPage -->
+                  <span class="method-name">cartPage</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="productCatalogue">
+                  </a> <!-- productCatalogue -->
+                  <span class="method-name">productCatalogue</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +160,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Lynx User\AppData\Local\Temp\testng-eclipse-1202014334\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Lynx User\AppData\Local\Temp\testng-eclipse-1323312574\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +169,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;GeneralStore.TestCases.test&quot;/&gt;
+      &lt;class name=&quot;GeneralStore.TestCases.TestExecution&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -185,16 +209,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'tests')
-data.setCell(0, 2, 'GeneralStore.TestCases.test')
-data.setCell(0, 3, 11295);
+data.setCell(0, 1, 'productCatalogue')
+data.setCell(0, 2, 'GeneralStore.TestCases.TestExecution')
+data.setCell(0, 3, 16286);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'FormPage_Test')
+data.setCell(1, 2, 'GeneralStore.TestCases.TestExecution')
+data.setCell(1, 3, 15371);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'cartPage')
+data.setCell(2, 2, 'GeneralStore.TestCases.TestExecution')
+data.setCell(2, 3, 2988);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 11 seconds</span>
+              <span class="suite-total-time">Total running time: 34 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -220,18 +252,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">GeneralStore.TestCases.test</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">GeneralStore.TestCases.TestExecution</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">configureAppiumTest</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">tests</span>
-                <span class="method-start">8469 ms</span>
+                <span class="method-name">FormPage_Test</span>
+                <span class="method-start">10839 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">productCatalogue</span>
+                <span class="method-start">26216 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">cartPage</span>
+                <span class="method-start">42504 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">19773 ms</span>
+                <span class="method-start">45493 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
