--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b577ab">  <td>24/09/30 14:53:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.configureAppiumTest()[pri:0, instance:GeneralStore.TestCases.test@2a265ea9]">&gt;&gt;configureAppiumTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1850954068</td>   <td></td> </tr>
-<tr bgcolor="b577ab">  <td>24/09/30 14:54:19</td>   <td>19766</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:GeneralStore.TestCases.test@2a265ea9]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1850954068</td>   <td></td> </tr>
-<tr bgcolor="7cfad4">  <td>24/09/30 14:54:08</td>   <td>8461</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="test.tests()[pri:0, instance:GeneralStore.TestCases.test@2a265ea9]">tests</td> 
-  <td>main@1850954068</td>   <td></td> </tr>
+<tr bgcolor="7cfad4">  <td>24/09/30 15:39:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestExecution.FormPage_Test()[pri:0, instance:GeneralStore.TestCases.TestExecution@11392934]">FormPage_Test</td> 
+  <td>main@771418758</td>   <td></td> </tr>
+<tr bgcolor="7cfad4">  <td>24/09/30 15:40:19</td>   <td>31665</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestExecution.cartPage()[pri:0, instance:GeneralStore.TestCases.TestExecution@11392934]">cartPage</td> 
+  <td>main@771418758</td>   <td></td> </tr>
+<tr bgcolor="b577ab">  <td>24/09/30 15:39:37</td>   <td>-10833</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.configureAppiumTest()[pri:0, instance:GeneralStore.TestCases.TestExecution@11392934]">&gt;&gt;configureAppiumTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@771418758</td>   <td></td> </tr>
+<tr bgcolor="7cfad4">  <td>24/09/30 15:40:03</td>   <td>15377</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestExecution.productCatalogue()[pri:0, instance:GeneralStore.TestCases.TestExecution@11392934]">productCatalogue</td> 
+  <td>main@771418758</td>   <td></td> </tr>
+<tr bgcolor="b577ab">  <td>24/09/30 15:40:22</td>   <td>34655</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:GeneralStore.TestCases.TestExecution@11392934]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@771418758</td>   <td></td> </tr>
 </table>
