improvements to basetest class file

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Lynx User\AppData\Local\Temp\testng-eclipse-1562615266\testng-customsuite.xml</span>
+                    <span>C:\Users\Lynx User\AppData\Local\Temp\testng-eclipse-101450553\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -160,7 +160,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Lynx User\AppData\Local\Temp\testng-eclipse-1562615266\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Lynx User\AppData\Local\Temp\testng-eclipse-101450553\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -213,20 +213,20 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'productCatalogue')
 data.setCell(0, 2, 'GeneralStore.TestCases.TestExecution')
-data.setCell(0, 3, 16229);
+data.setCell(0, 3, 16070);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'formPage')
 data.setCell(1, 2, 'GeneralStore.TestCases.TestExecution')
-data.setCell(1, 3, 15743);
+data.setCell(1, 3, 14324);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'cartPage')
 data.setCell(2, 2, 'GeneralStore.TestCases.TestExecution')
-data.setCell(2, 3, 2262);
+data.setCell(2, 3, 1942);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 34 seconds</span>
+              <span class="suite-total-time">Total running time: 32 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -254,24 +254,24 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">GeneralStore.TestCases.TestExecution</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">configureAppiumTest</span>
+                <span class="method-name">setUP</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">formPage</span>
-                <span class="method-start">9657 ms</span>
+                <span class="method-start">8966 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">productCatalogue</span>
-                <span class="method-start">25408 ms</span>
+                <span class="method-start">23297 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">cartPage</span>
-                <span class="method-start">41640 ms</span>
+                <span class="method-start">39368 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">43903 ms</span>
+                <span class="method-start">41313 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
