--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Lynx User\AppData\Local\Temp\testng-eclipse-101450553\testng-customsuite.xml</span>
+                    <span>C:\Users\Lynx User\AppData\Local\Temp\testng-eclipse-1061438748\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -108,7 +108,7 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="GeneralStore.TestCases.TestExecution" class="method navigator-link" hash-for-method="formPage">formPage</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="GeneralStore.TestCases.TestExecution" class="method navigator-link" hash-for-method="formPage(Serban Mora, male, Argentina)">formPage(Serban Mora, male, Argentina)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -143,9 +143,10 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="formPage">
-                  </a> <!-- formPage -->
+                  <a name="formPage(Serban Mora, male, Argentina)">
+                  </a> <!-- formPage(Serban Mora, male, Argentina) -->
                   <span class="method-name">formPage</span>
+                  <span class="parameters">(Serban Mora,male,Argentina)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -160,7 +161,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Lynx User\AppData\Local\Temp\testng-eclipse-101450553\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Lynx User\AppData\Local\Temp\testng-eclipse-1061438748\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -213,20 +214,20 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'productCatalogue')
 data.setCell(0, 2, 'GeneralStore.TestCases.TestExecution')
-data.setCell(0, 3, 16070);
+data.setCell(0, 3, 15321);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'formPage')
 data.setCell(1, 2, 'GeneralStore.TestCases.TestExecution')
-data.setCell(1, 3, 14324);
+data.setCell(1, 3, 14006);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'cartPage')
 data.setCell(2, 2, 'GeneralStore.TestCases.TestExecution')
-data.setCell(2, 3, 1942);
+data.setCell(2, 3, 1847);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 32 seconds</span>
+              <span class="suite-total-time">Total running time: 31 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -258,20 +259,20 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">formPage</span>
-                <span class="method-start">8966 ms</span>
+                <span class="method-name">formPage(Serban Mora, male, Argentina)</span>
+                <span class="method-start">8899 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">productCatalogue</span>
-                <span class="method-start">23297 ms</span>
+                <span class="method-start">22911 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">cartPage</span>
-                <span class="method-start">39368 ms</span>
+                <span class="method-start">38234 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">41313 ms</span>
+                <span class="method-start">40084 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
