--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,12 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">42,355</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">41,245</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">GeneralStore.TestCases.TestExecution</td><td><a href="#m0">cartPage</a></td><td rowspan="1">1732530496057</td><td rowspan="1">1942</td></tr><tr class="passedeven"><td><a href="#m1">formPage</a></td><td rowspan="1">1732530465655</td><td rowspan="1">14324</td></tr><tr class="passedeven"><td><a href="#m2">productCatalogue</a></td><td rowspan="1">1732530479986</td><td rowspan="1">16070</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">GeneralStore.TestCases.TestExecution</td><td><a href="#m0">cartPage</a></td><td rowspan="1">1732533949260</td><td rowspan="1">1847</td></tr><tr class="passedeven"><td><a href="#m1">formPage</a></td><td rowspan="1">1732533919925</td><td rowspan="1">14006</td></tr><tr class="passedeven"><td><a href="#m2">productCatalogue</a></td><td rowspan="1">1732533933937</td><td rowspan="1">15321</td></tr></tbody>
 </table>
 <h2>Default test</h2><h3 id="m0">GeneralStore.TestCases.TestExecution#cartPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">GeneralStore.TestCases.TestExecution#formPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">GeneralStore.TestCases.TestExecution#formPage</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>Serban Mora</td><td>male</td><td>Argentina</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m2">GeneralStore.TestCases.TestExecution#productCatalogue</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
