--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,12 +8,12 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">52,456</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test 1</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">52,507</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">GeneralStore.TestCases.TestExecution</td><td><a href="#m0">cartPage</a></td><td rowspan="1">1732710035485</td><td rowspan="1">2111</td></tr><tr class="passedeven"><td><a href="#m1">formPage</a></td><td rowspan="1">1732710000025</td><td rowspan="1">18405</td></tr><tr class="passedeven"><td><a href="#m2">productCatalogue</a></td><td rowspan="1">1732710018437</td><td rowspan="1">17045</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test 1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">GeneralStore.TestCases.TestExecution</td><td><a href="#m0">cartPage</a></td><td rowspan="1">1732892251587</td><td rowspan="1">1813</td></tr><tr class="passedeven"><td><a href="#m1">formPage</a></td><td rowspan="1">1732892216695</td><td rowspan="1">18386</td></tr><tr class="passedeven"><td><a href="#m2">productCatalogue</a></td><td rowspan="1">1732892235092</td><td rowspan="1">16493</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">GeneralStore.TestCases.TestExecution#cartPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test 1</h2><h3 id="m0">GeneralStore.TestCases.TestExecution#cartPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">GeneralStore.TestCases.TestExecution#formPage</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>Serban Mora</td><td>male</td><td>Argentina</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m2">GeneralStore.TestCases.TestExecution#productCatalogue</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
