--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,10 +11,6 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>FormPage_Test</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
 <td>productCatalogue</td>
 <td>&nbsp;</td></tr>
 <tr>
@@ -22,11 +18,15 @@
 <td>cartPage</td>
 <td>&nbsp;</td></tr>
 <tr>
+<td>&nbsp;</td>
+<td>formPage</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>configureAppiumTest</td>
+<td>setUP</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
