--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b577ab">  <td>24/09/30 15:40:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:GeneralStore.TestCases.TestExecution@11392934]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@771418758</td>   <td></td> </tr>
-<tr bgcolor="7cfad4">  <td>24/09/30 15:39:48</td>   <td>-34655</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestExecution.FormPage_Test()[pri:0, instance:GeneralStore.TestCases.TestExecution@11392934]">FormPage_Test</td> 
-  <td>main@771418758</td>   <td></td> </tr>
-<tr bgcolor="7cfad4">  <td>24/09/30 15:40:03</td>   <td>-19278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestExecution.productCatalogue()[pri:0, instance:GeneralStore.TestCases.TestExecution@11392934]">productCatalogue</td> 
-  <td>main@771418758</td>   <td></td> </tr>
-<tr bgcolor="b577ab">  <td>24/09/30 15:39:37</td>   <td>-45488</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.configureAppiumTest()[pri:0, instance:GeneralStore.TestCases.TestExecution@11392934]">&gt;&gt;configureAppiumTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@771418758</td>   <td></td> </tr>
-<tr bgcolor="7cfad4">  <td>24/09/30 15:40:19</td>   <td>-2990</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestExecution.cartPage()[pri:0, instance:GeneralStore.TestCases.TestExecution@11392934]">cartPage</td> 
-  <td>main@771418758</td>   <td></td> </tr>
+<tr bgcolor="be6a8b">  <td>24/12/13 13:17:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestExecution.productCatalogue()[pri:0, instance:GeneralStore.TestCases.TestExecution@5876a9af]">productCatalogue</td> 
+  <td>main@561959774</td>   <td></td> </tr>
+<tr bgcolor="be6a8b">  <td>24/12/13 13:17:47</td>   <td>-9088</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestExecution.formPage(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:GeneralStore.TestCases.TestExecution@5876a9af]">formPage</td> 
+  <td>main@561959774</td>   <td></td> </tr>
+<tr bgcolor="b2b0b4">  <td>24/12/13 13:18:10</td>   <td>13408</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:GeneralStore.TestCases.TestExecution@5876a9af]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@561959774</td>   <td></td> </tr>
+<tr bgcolor="be6a8b">  <td>24/12/13 13:18:08</td>   <td>11377</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestExecution.cartPage()[pri:0, instance:GeneralStore.TestCases.TestExecution@5876a9af]">cartPage</td> 
+  <td>main@561959774</td>   <td></td> </tr>
+<tr bgcolor="b2b0b4">  <td>24/12/13 13:17:27</td>   <td>-29280</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUP()[pri:0, instance:GeneralStore.TestCases.TestExecution@5876a9af]">&gt;&gt;setUP</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@561959774</td>   <td></td> </tr>
 </table>
